--- a/css/style.css
+++ b/css/style.css
@@ -6,19 +6,21 @@ body {
   color: #333;
 }
 header {
-  background: #004aad;
-  color: white;
-  padding: 15px;
+  background-color: white;
+  padding: 10px 0;
   text-align: center;
+  border-bottom: 2px solid #ddd;
 }
 nav a {
-  margin: 0 10px;
-  color: white;
+  color: black;
   text-decoration: none;
+  margin: 0 15px;
   font-weight: bold;
+  font-size: 18px;
+  transition: 0.3s;
 }
 nav a:hover {
-  text-decoration: underline;
+  color: #007bff; /* Azul suave */
 }
 main {
   padding: 20px;
